- #196 don't die on removal of double used soft_hard_usage
- #195 Photo Import white toggle did not work
- cpe import should remove version into '' (blank), not '-'
- #220 (E#5) write rights for webserver on config files
- #221 (E#6) Analysis search in Assess not working
- #215 TLP:Amber missing from default templates
- #218 Unable to import xml-advisories

=== Version 3.4.1

Changes:
- drop support for apache httpd 2.2

Fixes:
- db name of photo_import_id_seq --> import_photo_id_seq during upgrade
- install on openSUSE 42.3 and Tumbleweed
- directory mode for cpe- and cve-import directories.
- #139 change in advisory platform or product list influences the other
- #143 CVE details popup on assess page
- #148 stopping in taranis which is already stopped will not change a thing
- #149 remove trailing white-spaces before signing
- #153 not showing statistics
- #164 improve "taranis install" from git
- #167 showing custom searches for user 
- #192 Special characters in password not escaped
- fix REST and Taranis4u
- restore assess shortcut 'v'
- silence sparse warnings in phising checker

Improvements:
- support RedHat 7.4EL
- #79 Upgrade license from EUPL 1.1 to EUPL 1.2
- #79 Change the way that copyright and license is included in the code.
- #79 Remove personal names from the code
- allow home of taranis in other tree, f.i. /opt
- accept missing / after br in sending templates
- group-write on apache log directory
- #163 prefer local in $PATH 
- #168 source profile from (cron) script

=== Version 3.4.0

Security fixes
- Fixed vulnerabilities reported by MilCERT Austria:
   - Stored XSS vulnerability in the HTMLFeed parser.
   - XSS vulnerability in the sources import dialog.
   - XSS vulnerability in displaying email attachment filenames.

Improvements:
- The Taranis page adapts to two screen widths, FullHD and half-width FullHD.
- Comments and actions in Analysis items are improved.
- The menu shows unread items per Assess category.